test_suite/tests/ui/inject_constructor/missing_param.stderr
error[E0432]: unresolved import `dilib`
 --> $DIR/missing_param.rs:1:5
  |
1 | use dilib::{Singleton, Injectable};
  |     ^^^^^ use of undeclared crate or module `dilib`

error: cannot determine resolution for the derive macro `Injectable`
 --> $DIR/missing_param.rs:3:10
  |
3 | #[derive(Injectable)]
  |          ^^^^^^^^^^
  |
  = note: import resolution is stuck, try simplifying macro imports

error: cannot find attribute `inject` in this scope
 --> $DIR/missing_param.rs:4:3
  |
4 | #[inject(constructor="new(a, b)")]
  |   ^^^^^^
